# godot-rust-game

./: .gitignore  README.md
godot/: game.tscn  icon.svg.import  icon.tscn  my-extension.gdextension  player.tscn  project.godot  tile.tscn
godot/img/: background-tile.png.import  icon.svg.import  tile.png.import
rust/: Cargo.toml
rust/src/: lib.rs  player.rs
